force-app/main/default/objects/CPL_Joins__c/CPL_Joins__c.object-meta.xml
<CustomObject>
    <label>CPL Joins</label>
    <nameField>
        <displayFormat>SC-{0}</displayFormat>
        <label>CPL Join Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPL Joins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>