force-app/main/default/objects/CPL_Joins__c/fields/Active_CPL_Join__c.field-meta.xml
<CustomField>
    <fullName>Active_CPL_Join__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active CPL Join</label>
    <type>Checkbox</type>
</CustomField>