force-app/main/default/objects/CPL_Joins__c/fields/Billing_Branch__c.field-meta.xml
<CustomField>
    <fullName>Billing_Branch__c</fullName>
    <formula>TEXT ( Billing_Opportunity__r.Branch__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Branch</label>
    <type>Text</type>
</CustomField>