force-app/main/default/objects/CPL_Joins__c/fields/Billing_Industry__c.field-meta.xml
<CustomField>
    <fullName>Billing_Industry__c</fullName>
    <formula>TEXT ( Billing_Opportunity__r.NuCard_Industry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Industry</label>
    <type>Text</type>
</CustomField>