force-app/main/default/objects/CPL_Joins__c/fields/Billing_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Billing_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The destination CPL business opportunity.</description>
    <label>Billing Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>SPECCARD1</relationshipName>
    <type>Lookup</type>
</CustomField>