force-app/main/default/objects/CPL_Joins__c/fields/Billing_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Billing_Opportunity_Stage__c</fullName>
    <formula>TEXT (  Billing_Opportunity__r.OB_Operation_Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Opportunity Stage</label>
    <type>Text</type>
</CustomField>