force-app/main/default/objects/CPL_Joins__c/fields/Billing_Stage_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Stage_Type__c</fullName>
    <formula>TEXT ( Billing_Opportunity__r.Stage_Types__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Stage Type</label>
    <type>Text</type>
</CustomField>