force-app/main/default/objects/CPL_Joins__c/fields/Destination_Number__c.field-meta.xml
<CustomField>
    <fullName>Destination_Number__c</fullName>
    <formula>Billing_Opportunity__r.Forward_to_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Number</label>
    <type>Text</type>
</CustomField>