force-app/main/default/objects/CPL_Joins__c/fields/Last_Update_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Time__c</fullName>
    <label>Last Update Time</label>
    <type>DateTime</type>
</CustomField>