force-app/main/default/objects/CPL_Joins__c/fields/Lead_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Lead_Distribution__c</fullName>
    <label>Lead Distribution</label>
    <referenceTo>Lead_Distribution__c</referenceTo>
    <relationshipLabel>CPL Joins</relationshipLabel>
    <relationshipName>CPL_Joins</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>