force-app/main/default/objects/CPL_Joins__c/fields/Pending_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Pending_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case Creation functionality</description>
    <label>Pending Cancelled</label>
    <type>Checkbox</type>
</CustomField>