force-app/main/default/objects/CPL_Joins__c/fields/Producing_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Producing_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The nuhome CPL industry opp with the main DID number.</description>
    <label>Producing Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>CPL Spec Card Prod</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CPL Joins (Producing Opportunity)</relationshipLabel>
    <relationshipName>SPECCARD</relationshipName>
    <type>Lookup</type>
</CustomField>