force-app/main/default/objects/CPL_Joins__c/fields/Producing_Opportunity_Industry__c.field-meta.xml
<CustomField>
    <fullName>Producing_Opportunity_Industry__c</fullName>
    <formula>TEXT ( Producing_Opportunity__r.NuCard_Industry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producing Opportunity Industry</label>
    <type>Text</type>
</CustomField>