force-app/main/default/objects/CPL_Joins__c/fields/VF_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>VF_Sort_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VF Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>